<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/editStatementAction"
          android:visible="true"
          android:title="@string/edit_menu"
          android:titleCondensed="@string/edit_menu"
          android:icon="@drawable/ic_menu_edit"
	    app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/sendStatementAction"
          android:visible="true"
          android:title="@string/send_email_menu"
          android:titleCondensed="@string/send_menu"
          android:icon="@drawable/ic_dialog_email"
	    app:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/sendStatementRefresh"
          android:visible="true"
          android:title="@string/refresh_statement"
          android:titleCondensed="@string/refresh_statement"
          android:icon="@drawable/ic_menu_refresh"
	    app:showAsAction="ifRoom">
    </item>

</menu>
