<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brazedblue.waverly.EditStatementActivity"
                android:gravity="center">

    <com.brazedblue.waverly.EditStatementView
        android:id="@+id/statementView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:id="@+id/textNoun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noun"
            android:nextFocusForward="@+id/verbButton"
            android:textAppearance="@style/NounTheme"
            android:minWidth="@dimen/minViewWidth"/>

        <Button
            android:id="@+id/verbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusForward="@+id/textVerb"
            android:text="@string/verb_button"
            android:minWidth="@dimen/minViewWidth"/>

        <TextView
            android:id="@+id/textVerb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verbAnswer"
            android:nextFocusForward="@+id/pictureView"
            android:textAppearance="@style/NounTheme"
            android:minWidth="@dimen/minViewWidth"/>

        <ImageView
            android:id="@+id/pictureView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/imageContent"
            android:nextFocusForward="@+id/textNoun"/>

        <EditText
            android:id="@+id/statementEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verbAnswer"
            android:singleLine = "false"
            android:inputType="text"
            android:visibility="invisible"
            android:textColor="#000000"/>

        <com.brazedblue.waverly.ResultView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/result"
            android:textAppearance="@style/ResultTheme" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/multilineEditText"
            android:visibility="invisible"
            android:gravity="center"/>
    </com.brazedblue.waverly.EditStatementView>


</RelativeLayout>
